tests/spec/emit/snapshots/format_string_simple.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let name = "Alice";
    fmt.Print(f"Hello, {name}!")
  }
---
package main

import "fmt"

func test() {
	name := "Alice"
	fmt.Print("Hello, " + name + "!")
}
