tests/spec/emit/snapshots/format_string_solo_deref_operand_as_byte_at_receiver_is_parenthesized.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn first(r: Ref<string>) -> byte {
    f"{r.*}".byte_at(0)
  }
---
package main

func first(r *string) byte {
	return (*r)[0]
}
