tests/spec/emit/snapshots/format_string_solo_rune.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  
  fn test() {
    let c = 'A';
    fmt.Print(f"{c}")
  }
---
package main

import "fmt"

func test() {
	c := 'A'
	fmt.Printf("%c", c)
}
