tests/spec/emit/snapshots/format_string_solo_string_operand_is_the_operand.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn same(name: string) -> string {
    f"{name}"
  }
---
package main

func same(name string) string {
	return name
}
