tests/spec/emit/snapshots/format_string_string_alias_operand_concatenates.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  type Name = string
  
  fn greet(n: Name) -> string {
    f"hi {n}"
  }
---
package main

type Name = string

func greet(n Name) string {
	return "hi " + n
}
