tests/spec/emit/snapshots/format_string_string_operands_concatenate.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn greet(first: string, last: string) -> string {
    f"Hello, {first} {last}!"
  }
---
package main

func greet(first, last string) string {
	return "Hello, " + first + " " + last + "!"
}
