tests/spec/emit/snapshots/free_function_new_returning_channel_not_hijacked.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn new() -> Channel<int> {
    Channel.new<int>()
  }
  
  fn test() -> Channel<int> {
    new()
  }
---
package main

func new_() chan int {
	return make(chan int)
}

func test() chan int {
	return new_()
}
