tests/spec/emit/snapshots/full_arity_type_args_with_nonreceiver_impl_generic.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Pair<A, B> { a: A, b: B }
  
  impl<X, T> Pair<T, T> {
    fn pick(self, x: X) -> X { x }
  }
  
  fn test() -> bool {
    let p = Pair { a: 1, b: 2 };
    p.pick<bool, int>(true)
  }
---
package main

type Pair[A any, B any] struct {
	a A
	b B
}

func Pair_pick[X any, T any](_ Pair[T, T], x X) X {
	return x
}

func test() bool {
	p := Pair[int, int]{
		a: 1,
		b: 2,
	}
	return Pair_pick[bool, int](p, true)
}
