tests/spec/emit/snapshots/function_call_no_args.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn get_value() -> int {
    42
  }
  
  fn test() -> int {
    get_value()
  }
---
package main

func getValue() int {
	return 42
}

func test() int {
	return getValue()
}
