tests/spec/emit/snapshots/function_call_with_args.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn add(a: int, b: int) -> int {
    a + b
  }
  
  fn test() -> int {
    add(10, 20)
  }
---
package main

func add(a, b int) int {
	return a + b
}

func test() int {
	return add(10, 20)
}
