tests/spec/emit/snapshots/function_named_any_renamed.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn any<T>(items: Slice<T>, pred: fn(T) -> bool) -> bool {
    for item in items {
      if pred(item) { return true }
    }
    false
  }
  
  fn test() -> bool {
    any([1, 2, 3], |x| x > 2)
  }
---
package main

func any_[T any](items []T, pred func(T) bool) bool {
	for _, item := range items {
		if pred(item) {
			return true
		}
	}
	return false
}

func test() bool {
	return any_([]int{1, 2, 3}, func(x int) bool {
		return x > 2
	})
}
